assets/css/theme.css
/* ... */
.btn-title-more .fa,
.btn-title-more .glyphicon {
  font-size: 14px;
  margin-top: -1px;
}
.btn-title-more:hover {
  background-color: #232323;
  border-color: #232323;
  color: #ffffff;
}
p.btn-row {
  margin-top: -10px;
}
p.btn-row .btn {
  margin-top: 10px;
  margin-right: 10px;
}
p.btn-row .text {
  display: inline-block;
  margin-top: 10px;
  margin-right: 10px;
  vertical-align: middle;
}
.btn-view-more-block {
  width: 100%;
  max-width: 100%;
  display: block;
  font-size: 18px;
  padding: 13px 35px;
  border-color: #a5abb7;
  background-color: #a5abb7;
  color: #ffffff;
}
.btn-view-more-block:hover {
  border-color: #232323;
  background-color: #232323;
}
/* 1.6 */
/* Form / Input / Textarea / Select
/* ========================================================================== */
.form-control {
  -webkit-appearance: none;
  /* ios */
  -webkit-box-shadow: none;
  box-shadow: none;
  height: 40px;
  border-radius: 0;
  border: 2px solid #a1b1bc;
  color: #232323;
}
.form-control:focus {
  -webkit-appearance: none;
  /* ios */
  -webkit-box-shadow: none;
  box-shadow: none;
  border-color: #0D3880;
}
textarea {
  resize: none;
}
.bootstrap-select .dropdown-menu {
  border-radius: 0;
}
.bootstrap-select .dropdown-menu a {
  padding-top: 5px;
  padding-bottom: 5px;
}
.bootstrap-select > .selectpicker {
  -webkit-appearance: none;
  /* ios */
  -webkit-box-shadow: none;
  box-shadow: none !important;
  height: 40px;
  border-radius: 0;
  border: 3px solid #e9e9e9;
  background-color: #ffffff !important;
  color: #737475 !important;
}
.bootstrap-select > .selectpicker:focus {
  border-color: #232323;
}
.bootstrap-select-searchbox .form-control {
  border-radius: 0;
}
.bootstrap-select .selectpicker > .filter-option {
  color: #232323 !important;
  font-weight: 700 !important;
  font-size: 11px;
 
  line-height: 22px;
}
.alert {
  border-radius: 0;
}
label {
  font-size: 14px;
 
  color: #000;
}
input[type=checkbox] {
  margin-top: 2px;
  margin-right: 5px;
}
.form-login .row {
  margin-top: -20px;
}
.form-login .row + .row {
  margin-top: 0;
}
.form-login .row div[class*="col-"],
.form-login .row aside[class*="col-"] {
  margin-top: 20px;
}
.form-login .hello-text-wrap {
  line-height: 12px;
}
.form-login .btn-block {
  margin-left: auto;
  margin-right: auto;
}
@media (min-width: 992px) {
  .form-login .btn-block {
    max-width: 100%;
  }
}
.form-login .btn.facebook {
  background-color: #3e5c98;
  border-color: #3e5c98;
  color: #ffffff;
}
.form-login .btn.twitter {
  background-color: #22a9e0;
  border-color: #22a9e0;
  color: #ffffff;
}
.form-login .btn.facebook:hover,
.form-login .btn.twitter:hover {
  background-color: #232323;
  border-color: #232323;
}
.form-login .btn-theme {
  padding-top: 14px;
  padding-bottom: 14px;
}
.form-login .form-group {
  margin-bottom: 0;
}
.form-login .form-control {
  height: 50px;
}
.form-login .checkbox {
  font-size: 11px;
  margin-top: 0;
  margin-bottom: 0;
 
  color: #232323;
}
.form-login .checkbox label {
  font-weight: 700 !important;
}
.form-login .checkbox input[type=checkbox] {
  margin-top: 2px;
}
.form-login .col-md-12.col-lg-6.text-right-lg {
  line-height: 0;
}
@media (min-width: 1200px) {
  .form-login .col-md-12.col-lg-6.text-right-lg {
    margin-bottom: 2px;
  }
}
@media (max-width: 1199px) {
  .form-login .col-md-12.col-lg-6.text-right-lg {
    margin-top: 0;
  }
}
.form-login .forgot-password {
  color: #232323 !important;
  font-weight: 700 !important;
  font-size: 11px;
  
  line-height: 18px;
}
.form-login .forgot-password:hover {
  border-bottom: solid 1px #232323;
}
.form-login ::-webkit-input-placeholder {
  color: #232323 !important;
  font-weight: 700 !important;
  font-size: 11px;
  
  line-height: 22px;
}
.form-login :-moz-placeholder {
  color: #232323 !important;
  font-weight: 700 !important;
  font-size: 11px;
 
  line-height: 22px;
}
.form-login ::-moz-placeholder {
  color: #232323 !important;
  font-weight: 700 !important;
  font-size: 11px;
  
  line-height: 22px;
}
.form-login :-ms-input-placeholder {
  color: #232323 !important;
  font-weight: 700 !important;
  font-size: 11px;
  
  line-height: 22px;
}
.create-account {
  color: #232323;
}
.create-account .list-check {
  font-weight: 700;
}
.create-account .row {
  margin-top: -20px;
}
.create-account .row + .row {
  margin-top: 0;
}
.create-account .row div[class*="col-"],
.create-account .row aside[class*="col-"] {
  margin-top: 20px;
}
.create-account .hello-text-wrap {
  line-height: 12px;
}
.create-account .btn-theme {
  padding-top: 14px;
  padding-bottom: 14px;
}
.create-account .btn-create {
  margin-top: 15px;
}
/* 1.7 */
/* Top bar
/* ========================================================================== */
#day-divider {
  padding-left: 5px;
  padding-right: 5px;
}
.top-bar { /* This element is also styled in theme.js*/
  padding: 10px 0;
  height: 50px;
  font-size: 16px;
	background-color: #232323;
  color: rgb(168, 168, 168);
  transition: height 0.3s ease;
  overflow: hidden;
}

.extend-top-bar {
  display: none;
}

@media (max-width: 991px) {
  .header {
    height: 130px;
  }
  .header-wrapper .container {
    padding-top: 30px;
  }
  .top-bar-container {
    display: none;
  }
  .extend-top-bar {
    display: block;
  }
  .chevron-box {
    width: 100%;
    text-align: center;
  }
  .chevron-box i {
    padding-top: 5px;
  }
  .top-bar-container-mobile[id*="closed"] {
    display: none;
  }
  
  .top-bar-container-mobile[id*="open"] {
    display: block;
    text-align: center;
  }
}

.top-bar ul {
  margin-bottom: 0;
}
.top-bar ul li {
  margin-right: 20px;
}
.top-bar ul li i{
  color: white;
}
@media (max-width: 991px) {
  .top-bar ul li {
    margin-right: 5px;
  }
}
.top-bar ul a:hover span {
  border-bottom: solid 1px #0D3880;
}
.top-bar ul a:hover .fa {
  color: #ec005f;
}
.top-bar ul a span.color {
  color: #0D3880;
  margin-left: 5px;
}
@media (max-width: 991px) {
  .top-bar ul a span {
    display: none;
  }
}
/* ... */

